--- a/angular-client/src/app/stock.component.css
+++ b/angular-client/src/app/stock.component.css
@@ -6,6 +6,7 @@ td.mono { font-family: monospace; }
 td.visible { visibility: visible;}
 td.hidden { visibility: hidden; }
 td.none { display: none; }
+td.pointer { cursor: pointer; }
 div.dow { border-bottom: 2px solid #ccc; }
 
 tr.buy { color: hsl(0, 50%, 40%); }
