--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="configuration" style="display: table;"></div>
 <ol>
-  <li class="stock-panel" *ngFor="let symbol of symbolsEmpty; trackBy: trackByFunction" [_symbol]="symbol"></li>
+  <li class="stock-panel" *ngFor="let symbol of symbols; trackBy: trackByFunction"
+      [_symbol]="symbol" [hidden]="!havingShares(symbol)"></li>
+</ol>
+<ol>
+  <li class="stock-panel" *ngFor="let symbol of symbols; trackBy: trackByFunction"
+      [_symbol]="symbol" [hidden]="havingShares(symbol)"></li>
 </ol>
 
 <div class="notice-container">
