--- a/angular-client/src/app/stock.component.html
+++ b/angular-client/src/app/stock.component.html
@@ -1,32 +1,32 @@
-<div [ngStyle]="{'background-color': backgroundColor()}" style="padding: .25em .75em;">
-  <div style="position: relative;">
-    <div class="name">{{name}}</div>
-    <table style="width: 100%">
-      <tr>
-        <td class="small">Today</td>
-        <td class="small">Est.</td>
-        <td></td>
-        <td>
-          <div style="float: left" [ngClass]="symbolClass()">{{ symbol }}</div>
+<div class="name">{{name}}</div>
+<div [ngStyle]="{'background-color': backgroundColor()}" style="padding: .25em .75em">
+  <div style="position: relative">
+    <div style="z-index: 5; width: 100%; display: table">
+      <div style="display: table-row">
+        <div class="small" style="display: table-cell">Today</div>
+        <div class="small" style="display: table-cell">Est.</div>
+        <div style="display: table-cell"></div>
+        <div style="display: table-cell">
+          <div style="float: left" [ngClass]="symbolClass()" (click)="turnOnDebugging()">{{ symbol }}</div>
           <div style="float: right" [ngStyle]="{'visibility': po.quantity >= 0 ? 'visible' : 'hidden'}">{{ po.quantity }}</div>
           <div style="clear: both"></div>
-        </td>
-      </tr>
-      <tr>
-        <td class="small mono"><span [hidden]="fu.high < 0">{{ fu.high.toFixed(2) }}</span></td>
-        <td class="small mono"><span [hidden]="estimate_high < 0">{{ estimate_high.toFixed(2) }}</span></td>
-        <td class="small mono" style="color: #13f;">{{ showThreshold(thresholdSell) }}</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td class="small mono"><span [hidden]="fu.low < 0">{{ fu.low.toFixed(2) }}</span></td>
-        <td class="small mono"><span [hidden]="estimate_low < 0">{{ estimate_low.toFixed(2) }}</span></td>
-        <td class="small mono" style="color: #f00;">{{ showThreshold(thresholdBuy) }}</td>
-        <td style="text-align: right" [ngStyle]="{'visibility': last_trade_price > 0 ? 'visible' : 'hidden'}">
+        </div>
+      </div>
+      <div style="display: table-row">
+        <div class="small mono" style="display: table-cell"><span [hidden]="fu.high < 0">{{ fu.high.toFixed(2) }}</span></div>
+        <div class="small mono" style="display: table-cell"><span [hidden]="estimate_high < 0">{{ estimate_high.toFixed(2) }}</span></div>
+        <div class="small mono" style="color: #13f; display: table-cell">{{ showThreshold(thresholdSell) }}</div>
+        <div style="display: table-cell"></div>
+      </div>
+      <div style="display: table-row">
+        <div class="small mono" style="display: table-cell"><span [hidden]="fu.low < 0">{{ fu.low.toFixed(2) }}</span></div>
+        <div class="small mono" style="display: table-cell"><span [hidden]="estimate_low < 0">{{ estimate_low.toFixed(2) }}</span></div>
+        <div class="small mono" style="color: #f00; display: table-cell">{{ showThreshold(thresholdBuy) }}</div>
+        <div style="text-align: right; display: table-cell" [ngStyle]="{'visibility': last_trade_price > 0 ? 'visible' : 'hidden'}">
           {{ last_trade_price.toFixed(2) }}
-        </td>
-      </tr>
-    </table>
+        </div>
+      </div>
+    </div>
   </div>
   <table style="width: 100%; margin-left: -.4em; margin-right: -.4em"><tr class="form-group">
     <td style="padding-right: .4em">
@@ -44,7 +44,7 @@
   </tr></table>
   <div>
     <span *ngIf="orders != null && orders.length != 0" title="Export order list to console" (click)="exportOrders()"
-          class="button">&#x1F353;</span>&nbsp;&nbsp;
+          class="button">&#x23F1;</span>&nbsp;&nbsp;
     <span *ngIf="orders != null && orders.length != 0 && !hideMatches" (click)="hideMatches = !hideMatches" class="button">&#x21D2;</span>
     <span *ngIf="orders != null && orders.length != 0 && hideMatches"  (click)="hideMatches = !hideMatches" class="button">&#x21D0;</span>
   </div>
