--- a/angular-client/src/app/configuration.component.html
+++ b/angular-client/src/app/configuration.component.html
@@ -37,3 +37,8 @@
     C<br/>o<br/>n<br/>f<br/>i<br/>g<br/>u<br/>r<br/>a<br/>t<br/>i<br/>o<br/>n
   </div>
 </div>
+
+<span class="button" style="display: block; line-height: 1; font-size: 2rem" (click)="showOrHideStastiticData()"
+      [title]="showStats ? 'Hide stastitic data' : 'Show stastitic data'">
+  &nbsp;&#x0FC4;
+</span>
