--- a/angular-client/src/app/stock.component.css
+++ b/angular-client/src/app/stock.component.css
@@ -1,7 +1,7 @@
 .button { color: #f00; cursor: pointer; }
 div.small { font-size: .9em; }
 div.smaller { font-size: .8em; }
-div.x-small { font-size: .7em; }
+div.x-small { font-size: .75em; }
 .mono { font-family: monospace; }
 div.visible { visibility: visible;}
 div.hidden { visibility: hidden; }
@@ -16,3 +16,4 @@ tr.sell.confirmed { font-style: italic; color: hsl(240, 50%, 60%); }
 tr.buy.matched { color: hsl(0, 50%, 82%); }
 tr.sell.matched { color: hsl(240, 50%, 82%); }
 tr.matched.hide { display: none; }
+.opaque { opacity: .6 }
