--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -14,6 +14,7 @@ table.orders tr.buy { color: #f55 }
 table.orders tr.sell { color: #36f }
 table.orders tr.notfilled { font-style: italic; font-family: 'Roboto Condensed',sans-serif; opacity: .82 }
 span.b { cursor: pointer; font-size: xx-large; line-height: 1 }
+span.c { font-weight: 600 }
 
 table.stats {
   width: 100%;
